fix: 메인 화면 카테고리 중앙 맞추기, 상세페이지 카드 폭 맞추기

--- a/assets/scss/components/main-page/top-bar.scss
+++ b/assets/scss/components/main-page/top-bar.scss
@@ -123,11 +123,11 @@
     }
   }
   .bottom {
-    height: 7vh;
+    height: 32px;
     background-color: #fafafa;
     .category-wrp {
       display: flex;
-      line-height: 62px;
+      line-height: 32px;
       div:first-child {
         margin-left: 24px;
         font-size: 0.88rem;
