--- a/assets/scss/detail-page/detail.scss
+++ b/assets/scss/detail-page/detail.scss
@@ -253,6 +253,7 @@
       align-items: center;
 
       .m-detail-content {
+        width: calc(100% - 64px);
         height: max-content;
         background-color: #ffffff;
         box-shadow: 0px 0px 4px rgba(0, 52, 138, 0.04),
