--- a/assets/scss/detail-page/detail.scss
+++ b/assets/scss/detail-page/detail.scss
@@ -365,6 +365,15 @@
             font-size: 20px;
           }
 
+          .content > ::v-deep mark #text {
+            width: 50px !important;
+
+            #text {
+              color: red !important;
+              width: 50px;
+            }
+          }
+
           .m-content-text {
             font-weight: 400;
             line-height: 160%;
