--- a/assets/scss/main-page/category.scss
+++ b/assets/scss/main-page/category.scss
@@ -1,7 +1,6 @@
 @import '@/assets/scss/util.scss';
 
 .category-wrp {
-
 }
 
 .category-wrp-m {
@@ -11,45 +10,55 @@
     height: 100vh;
   }
   #Category {
-    width: 228px; height: 100vh;
+    width: 228px;
+    height: 100vh;
     .logo {
-      margin: 16px 16px 24px 16px; padding: 0px;
+      margin: 16px 16px 24px 16px;
+      padding: 0px;
       .logo-img {
         margin-top: 6px;
         img {
-          width: 125px; height: 30px;
+          width: 125px;
+          height: 30px;
         }
       }
     }
     .category {
       .sub-menu-wrp {
-        margin: 0 4px; padding-bottom: 12px;
+        margin: 0 4px;
+        padding-bottom: 12px;
         .search {
-          width: 204px; height: 36px; line-height: 32px;
+          width: 204px;
+          height: 36px;
+          line-height: 32px;
         }
 
         .menu {
           display: flex;
-          height: 16px; line-height: 10px;
-          font-size: .88rem;
+          height: 16px;
+          line-height: 10px;
+          font-size: 0.88rem;
         }
       }
       .category-wrp {
         margin-top: 24px;
         .title {
-          height: 14px; line-height: 14px;
-          margin: 14px 0px 14px 6px; padding-left: 10px;
-          font-size: .88rem;
+          height: 14px;
+          line-height: 14px;
+          margin: 14px 0px 14px 6px;
+          padding-left: 10px;
+          font-size: 0.88rem;
         }
         .sub-title {
-          height: 32px; line-height: 32px;
+          height: 32px;
+          line-height: 32px;
           margin-bottom: 6px;
           padding-left: 24px;
-          font-size: .88rem;
+          font-size: 0.88rem;
           color: #a3a3a3;
           &.selected {
             color: #181818;
-            background: #EBEEF1;
+            background: #ebeef1;
             border-radius: 8px;
           }
         }
@@ -61,27 +70,29 @@
     #Category {
       width: 270px;
       height: 100vh;
-      background: #FAFAFA;
-      border-right: 1px solid #E7E7E7;
+      background: #fafafa;
+      border-right: 1px solid #e7e7e7;
       overflow-y: scroll;
       .logo {
         width: 90%;
         text-align: center;
         .logo-desc {
-          font-size: .88rem;
+          font-size: 0.88rem;
           color: #737373;
         }
         .category-close {
-          margin-top: 30px; 
+          margin-top: 30px;
           text-align: right;
           img {
-            width: 24px; height: 24px;
+            width: 24px;
+            height: 24px;
           }
         }
         .logo-img {
           margin-top: 6px;
           img {
-            width: 148px; height: 36px;
+            width: 148px;
+            height: 36px;
           }
         }
       }
@@ -90,14 +101,16 @@
         .sub-menu-wrp {
           margin: 0 8px;
           padding-bottom: 24px;
-          border-bottom: 1px solid #E7E7E7;
+          border-bottom: 1px solid #e7e7e7;
           .search {
             display: flex;
             justify-content: space-between;
-            width: 222px; height: 42px; line-height: 40px;
+            width: 222px;
+            height: 42px;
+            line-height: 40px;
             margin-bottom: 16px;
-            background: #FFFFFF;
-            border: 1px solid #E7E7E7;
+            background: #ffffff;
+            border: 1px solid #e7e7e7;
             border-radius: 8px;
             .search-box {
               display: flex;
@@ -108,7 +121,7 @@
               flex-grow: 1;
               padding-left: 12px;
               font-size: 1rem;
-              color: #A3A3A3;
+              color: #a3a3a3;
               border: none !important;
               border-radius: 8px;
               resize: none;
@@ -120,17 +133,20 @@
               width: 32px;
               display: flex;
               align-items: center;
-    
+
               img {
-                width: 16px; height: 18px;
+                width: 16px;
+                height: 18px;
                 cursor: pointer;
               }
             }
           }
           .menu {
             display: flex;
-            height: 12px; line-height: 16px;
-            font-size: 1rem; font-weight: 500;
+            height: 12px;
+            line-height: 16px;
+            font-size: 1rem;
+            font-weight: 500;
             padding: 16px;
             border-radius: 8px;
             cursor: pointer;
@@ -138,43 +154,49 @@
               flex-grow: 1;
             }
             div > img {
-              width: 6px; height: 12px;
+              width: 6px;
+              height: 12px;
             }
           }
           .selected {
-            background-color: #EBEEF1EA;
+            background-color: #ebeef1ea;
           }
           #category-about-us {
             padding-bottom: 24px;
-            border-bottom: 1px solid #E7E7E7;
+            border-bottom: 1px solid #e7e7e7;
             margin-bottom: 24px;
           }
         }
         .category-wrp {
           margin-top: 24px;
           .title {
-            height: 20px; line-height: 20px;
-            margin: 14px 0px 14px 6px; padding-left: 10px;
-            font-size: 1rem; font-weight: 500;
+            height: 20px;
+            line-height: 20px;
+            margin: 14px 0px 14px 6px;
+            padding-left: 10px;
+            font-size: 1rem;
+            font-weight: 500;
             cursor: pointer;
             &.selected {
-              border-left: 2px solid #3E82F1;
+              border-left: 2px solid #3e82f1;
             }
           }
           .sub-title {
-            height: 42px; line-height: 42px;
+            height: 42px;
+            line-height: 42px;
             padding-left: 24px;
-            font-size: .88rem; font-weight: 500;
+            font-size: 0.88rem;
+            font-weight: 500;
             color: #a3a3a3;
             &.selected {
               color: #181818;
-              background: #EBEEF1;
+              background: #ebeef1;
               border-radius: 8px;
             }
           }
           .sub-title:hover {
             color: #181818;
-            background: #EBEEF1;
+            background: #ebeef1;
             border-radius: 8px;
             cursor: pointer;
           }
@@ -184,13 +206,17 @@
         text-decoration: none !important;
       }
       .posting-btn {
-        width: 165px; height: 48px; line-height: 48px;
-        margin-top: 30px; margin-bottom: 30px;
-        font-size: 1rem; font-weight: 500;
+        width: 165px;
+        height: 48px;
+        line-height: 48px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        font-size: 1rem;
+        font-weight: 500;
         text-align: center;
         color: #181818;
-        background-color: #FFFFFF;
-        border: 2px solid #3E82F1;
+        background-color: #ffffff;
+        border: 2px solid #3e82f1;
         border-radius: 8px;
         cursor: pointer;
       }
@@ -203,31 +229,34 @@
   scrollbar-width: none; /* Firefox */
 }
 #Category::-webkit-scrollbar {
-    display: none; /* Chrome, Safari, Opera*/
+  display: none; /* Chrome, Safari, Opera*/
 }
 #Category {
-  width: 270px; height: calc(100vh - 44px); 
-  background: #FAFAFA;
-  border-right: 1px solid #E7E7E7;
+  width: 270px;
+  height: calc(100vh - 44px);
+  background: #fafafa;
+  border-right: 1px solid #e7e7e7;
   overflow-y: scroll;
   .logo {
     width: 90%;
     text-align: center;
     .logo-desc {
-      font-size: .88rem;
+      font-size: 0.88rem;
       color: #737373;
     }
     .category-close {
-      margin-top: 30px; 
+      margin-top: 30px;
       text-align: right;
       img {
-        width: 24px; height: 24px;
+        width: 24px;
+        height: 24px;
       }
     }
     .logo-img {
       margin-top: 6px;
       img {
-        width: 148px; height: 36px;
+        width: 148px;
+        height: 36px;
       }
     }
   }
@@ -236,14 +265,16 @@
     .sub-menu-wrp {
       margin: 0 8px;
       padding-bottom: 24px;
-      border-bottom: 1px solid #E7E7E7;
+      border-bottom: 1px solid #e7e7e7;
       .search {
         display: flex;
         justify-content: space-between;
-        width: 222px; height: 42px; line-height: 40px;
+        width: 222px;
+        height: 42px;
+        line-height: 40px;
         margin-bottom: 16px;
-        background: #FFFFFF;
-        border: 1px solid #E7E7E7;
+        background: #ffffff;
+        border: 1px solid #e7e7e7;
         border-radius: 8px;
         .search-box {
           display: flex;
@@ -254,7 +285,7 @@
           flex-grow: 1;
           padding-left: 12px;
           font-size: 1rem;
-          color: #A3A3A3;
+          color: #a3a3a3;
           border: none !important;
           border-radius: 8px;
           resize: none;
@@ -268,15 +299,18 @@
           align-items: center;
 
           img {
-            width: 16px; height: 18px;
+            width: 16px;
+            height: 18px;
             cursor: pointer;
           }
         }
       }
       .menu {
         display: flex;
-        height: 12px; line-height: 16px;
-        font-size: 1rem; font-weight: 500;
+        height: 12px;
+        line-height: 16px;
+        font-size: 1rem;
+        font-weight: 500;
         padding: 16px;
         border-radius: 8px;
         cursor: pointer;
@@ -284,43 +318,49 @@
           flex-grow: 1;
         }
         div > img {
-          width: 6px; height: 12px;
+          width: 6px;
+          height: 12px;
         }
       }
       .selected {
-        background-color: #EBEEF1EA;
+        background-color: #ebeef1ea;
       }
       #category-about-us {
         padding-bottom: 24px;
-        border-bottom: 1px solid #E7E7E7;
+        border-bottom: 1px solid #e7e7e7;
         margin-bottom: 24px;
       }
     }
     .category-wrp {
       margin-top: 24px;
       .title {
-        height: 20px; line-height: 20px;
-        margin: 14px 0px 14px 6px; padding-left: 10px;
-        font-size: 1rem; font-weight: 500;
+        height: 20px;
+        line-height: 20px;
+        margin: 14px 0px 14px 6px;
+        padding-left: 10px;
+        font-size: 1rem;
+        font-weight: 500;
         cursor: pointer;
         &.selected {
-          border-left: 2px solid #3E82F1;
+          border-left: 2px solid #3e82f1;
         }
       }
       .sub-title {
-        height: 42px; line-height: 42px;
+        height: 42px;
+        line-height: 42px;
         padding-left: 24px;
-        font-size: .88rem; font-weight: 500;
+        font-size: 0.88rem;
+        font-weight: 500;
         color: #a3a3a3;
         &.selected {
           color: #181818;
-          background: #EBEEF1;
+          background: #ebeef1;
           border-radius: 8px;
         }
       }
       .sub-title:hover {
         color: #181818;
-        background: #EBEEF1;
+        background: #ebeef1;
         border-radius: 8px;
         cursor: pointer;
       }
@@ -330,13 +370,17 @@
     text-decoration: none !important;
   }
   .posting-btn {
-    width: 165px; height: 48px; line-height: 48px;
-    margin-top: 30px; margin-bottom: 30px;
-    font-size: 1rem; font-weight: 500;
+    width: 165px;
+    height: 48px;
+    line-height: 48px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 1rem;
+    font-weight: 500;
     text-align: center;
     color: #181818;
-    background-color: #FFFFFF;
-    border: 2px solid #3E82F1;
+    background-color: #ffffff;
+    border: 2px solid #3e82f1;
     border-radius: 8px;
     cursor: pointer;
   }
