--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -14,8 +14,9 @@ body {
   color: #181818;
 }
 
-#fileInput.dragdrop{
-  width: 150px; height: 30px;
+#fileInput.dragdrop {
+  width: 150px;
+  height: 30px;
   margin-left: -155px;
   margin-top: 15px;
   margin-bottom: 10px;
@@ -27,5 +28,28 @@ body {
   cursor: pointer;
   z-index: 0 !important;
   width: 140px;
+  position: absolute;
+}
+
+#fileInput.mypage-profile {
+  width: 36px;
+  height: 36px;
+  padding: 0;
+  margin: 0;
+  opacity: 0;
+  margin-top: -40px;
+  position: relative;
+}
+
+#fileInput.mypage-profile > div > .custom-file {
+  width: 36px;
+  height: 36px;
+  position: absolute;
+}
+
+#fileInput.mypage-profile > div > .custom-file > input {
+  cursor: pointer;
+  z-index: 0 !important;
+  width: 36px;
   position: absolute;
 }
