--- a/assets/scss/my-page/my-page.scss
+++ b/assets/scss/my-page/my-page.scss
@@ -165,33 +165,44 @@
       height: calc(100vh - 144px);
       padding: 40px 16px 0 16px;
       text-align: center;
-      .m-profile-img {
-        background-color: #ffffff;
-        width: 106px;
-        height: 106px;
-        border: 1px solid #f5f5f5;
-        box-shadow: 0px 0px 4px rgba(0, 52, 138, 0.04),
-          0px 4px 8px rgba(0, 52, 138, 0.06);
-        border-radius: 53px;
-        margin-bottom: 40px;
+      .m-mypage-body-top {
+        height: 120px;
+        padding-bottom: 40px;
+        .m-profile-img-wrp {
+          position: absolute;
+          left: 50%;
+          transform: translate(-50%, 0%);
+          .m-profile-img {
+            background-color: #ffffff;
+            width: 106px;
+            height: 106px;
+            border: 1px solid #f5f5f5;
+            box-shadow: 0px 0px 4px rgba(0, 52, 138, 0.04),
+              0px 4px 8px rgba(0, 52, 138, 0.06);
+            border-radius: 53px;
 
-        @include tablet {
-          width: 120px;
-        }
+            @include tablet {
+              width: 120px;
+            }
 
-        @include lands-tablet {
-          width: 120px;
-        }
+            @include lands-tablet {
+              width: 120px;
+            }
 
-        @include lands-mobile {
-          width: 80px;
+            @include lands-mobile {
+              width: 80px;
+            }
+          }
+          .m-profile-edit-btn {
+            width: 36px;
+            height: 36px;
+            img {
+              width: 36px;
+            }
+            margin-left: 75px;
+            margin-top: -40px;
+          }
         }
-      }
-      .m-profile-edit-btn {
-        width: 36px;
-        position: absolute;
-        margin-left: -25px;
-        margin-top: 65px;
       }
 
       .m-sub-title {
