--- a/assets/scss/my-page/my-page.scss
+++ b/assets/scss/my-page/my-page.scss
@@ -304,7 +304,7 @@
           }
         }
       }
-      .m-delete-account {
+      .m-mypage-bottom {
         display: flex;
         padding: 24px 8px;
         height: 48px;
@@ -312,6 +312,13 @@
         font-size: 1rem;
         color: #7a7a7a;
         text-align: left;
+        &._01 {
+          padding-bottom: 0;
+        }
+        &._02 {
+          border-top: 1px solid #e7e7e7;
+          padding-top: 0;
+        }
         cursor: pointer;
         .title {
           flex-grow: 1;
