--- a/assets/scss/detail-page/detail.scss
+++ b/assets/scss/detail-page/detail.scss
@@ -224,7 +224,7 @@
 
 #m-PostingPage {
   main {
-    height: 100%;
+    height: calc(100vh - 185px);
     font-size: 5vmin;
     .m-detail-header {
       height: 7vmax;
@@ -245,7 +245,7 @@
     }
 
     .m-detail-container {
-      height: 70vh;
+      height: calc(100vh - 253px);
       overflow: scroll;
       background-color: #f3f3f3;
       display: flex;
@@ -276,28 +276,28 @@
             'tags' 2fr
             '.' 1fr / 1fr;
 
-            .m-profile-info-main {
-              display: flex;
-              align-items: center;
-              grid-area: writer;
-    
-              .m-profile-img {
-                width: 30px;
-                height: 30px;
-                margin-right: 8px;
-                border-radius: 100%;
-              }
+          .m-profile-info-main {
+            display: flex;
+            align-items: center;
+            grid-area: writer;
 
-              .writer {
-                align-self: center;
-                color: #a3a3a3;
-                font-size: 13px;
-    
-                @include tablet {
-                  font-size: 18px;
-                }
+            .m-profile-img {
+              width: 30px;
+              height: 30px;
+              margin-right: 8px;
+              border-radius: 100%;
+            }
+
+            .writer {
+              align-self: center;
+              color: #a3a3a3;
+              font-size: 13px;
+
+              @include tablet {
+                font-size: 18px;
               }
             }
+          }
 
           .d-day {
             width: max-content;
@@ -472,11 +472,9 @@
       align-items: center;
       justify-items: start;
       align-content: center;
-      // width: 100%;
       background-color: #ffffff;
       box-shadow: 0px 0px 4px rgba(0, 52, 138, 0.04), 0px 0px 0px #ffffff;
-      height: 10vmax;
-      border-radius: 20px 20px 0px 0px;
+      height: 68px;
       padding: 0 16px;
 
       @include lands-mobile {
@@ -490,17 +488,10 @@
       .m-comment-posting-toggle {
         // margin-left: 16px;
         display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 60vw;
-        height: 6vh;
-        line-height: 44px;
-        border: 1px solid #efefef;
-        border-radius: 8px;
-        text-align: center;
-        font-size: 16px;
-        color: #a3a3a3;
-        background-color: #fafafa;
+        width: 55vw;
+        // line-height: 44px;
+        font-size: 0.88rem;
+        color: #181818;
         cursor: pointer;
 
         @include tablet {
@@ -508,18 +499,19 @@
         }
 
         .m-img-wrp {
-          text-align: center;
-          width: 100%;
+          width: max-content;
           .comment-img {
-            width: 18px;
-            height: 18px;
+            width: 24px;
+            height: 24px;
             margin-right: 5px;
+            margin-top: -1px;
             vertical-align: middle;
           }
           .detail-img {
             width: 14px;
             height: 20px;
             margin-right: 5px;
+            margin-top: -1px;
             vertical-align: middle;
           }
           span {
@@ -530,18 +522,27 @@
           }
         }
       }
-
+      .sub-menu {
+        font-size: 0.88rem;
+        span {
+          margin-left: 9px;
+          font-weight: 500;
+          vertical-align: middle;
+          display: inline-block;
+          margin-top: -13px;
+        }
+      }
       img {
-        width: 40px;
+        width: 24px;
 
         @include tablet {
-          width: 60px;
+          width: 24px;
         }
       }
     }
 
     .m-comment-container {
-      height: 70vh;
+      height: calc(100vh - 253px);
       overflow: scroll;
       .m-detail-transition {
         display: grid;
