fix: 글쓰기 - 서브 카테고리 삭제

--- a/assets/scss/detail-page/posting.scss
+++ b/assets/scss/detail-page/posting.scss
@@ -282,7 +282,7 @@
             color: #454545;
           }
           .sub-wrp {
-            width: 100%;
+            // width: 100%;
             height: 46px;
             line-height: 46px;
             margin-top: 12px;
@@ -350,7 +350,7 @@
         .category {
           margin-top: 24px;
           .sub-wrp {
-            width: 100%;
+            width: 50%;
           }
         }
         .d-day {
