--- a/assets/scss/components/common/dropdown-category.scss
+++ b/assets/scss/components/common/dropdown-category.scss
@@ -8,7 +8,7 @@
   }
   .select-box {
     position: relative;
-    width: 50%;
+    width: 100%;
     height: 44px;
     border-radius: 8px;
     border-radius: 8px;
@@ -38,7 +38,8 @@
     align-items: center;
     width: 100%;
     height: 16px;
-    margin-top: 16px;
+    padding-top: 23px;
+    // margin-top: 16px;
     border: 0 none;
     outline: 0 none;
     padding-left: 15px;
@@ -92,7 +93,7 @@
   }
 
   .select-box .option-item {
-    width: 130px;
+    // width: 130px;
     height: 42px;
     line-height: 42px;
     font-size: 0.88rem;
@@ -102,7 +103,7 @@
   }
 
   .select-box .option-item-sub {
-    width: 130px;
+    // width: 130px;
     height: 42px;
     line-height: 42px;
     font-size: 0.88rem;
