feat: 카드 리스트에서 좋아요 갯수 노출

--- a/assets/scss/main-page/card.scss
+++ b/assets/scss/main-page/card.scss
@@ -428,6 +428,10 @@
             }
           }
         }
+        .likes-cnt {
+          font-size: 0.75rem;
+          text-align: center;
+        }
         .sub-menu-btn {
           position: relative;
           width: 20px;
