--- a/assets/scss/components/common/sub-filter-dropdown.scss
+++ b/assets/scss/components/common/sub-filter-dropdown.scss
@@ -5,24 +5,24 @@
   padding: 4px 10px;
   gap: 4px;
   margin-right: 20px;
-  
-  width: 55px;
+
+  width: max-content;
   height: 25px;
-  
-  background: #FFFFFF;
-  border: 1px solid #EFEFEF;
+
+  background: #ffffff;
+  border: 1px solid #efefef;
   border-radius: 9999px;
 
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
-  color: #4D4D4D;
+  color: #4d4d4d;
 
   &.selected {
-    .select-box-wrp >.select-box > .label {
-      color: #005B9A !important;
+    .select-box-wrp > .select-box > .label {
+      color: #005b9a !important;
     }
-    border: 1px solid #005B9A;
+    border: 1px solid #005b9a;
   }
 
   .bottom-arrow {
@@ -43,7 +43,7 @@
   }
   .select-box {
     position: relative;
-    width: 55px;
+    width: max-content;
     height: 35px;
     border-radius: 8px;
     z-index: 10;
@@ -73,7 +73,7 @@
   }
 
   .select-box .label {
-    color: #4D4D4D;
+    color: #4d4d4d;
     width: 100%;
     height: 100%;
     border: 0 none;
@@ -107,7 +107,8 @@
     scrollbar-width: none; /* Firefox */
     max-height: 0;
     transition: 0.3s ease-in;
-    box-shadow: 0px 0px 4px rgba(0, 52, 138, 0.04), 0px 8px 16px rgba(0, 52, 138, 0.08);
+    box-shadow: 0px 0px 4px rgba(0, 52, 138, 0.04),
+      0px 8px 16px rgba(0, 52, 138, 0.08);
     border-radius: 8px;
   }
 
