feat: 한동대 학생 인증

--- a/assets/scss/my-page/my-page.scss
+++ b/assets/scss/my-page/my-page.scss
@@ -318,6 +318,7 @@
         &._02 {
           border-top: 1px solid #e7e7e7;
           padding-top: 0;
+          padding-bottom: 0;
         }
         cursor: pointer;
         .title {
