--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -53,3 +53,20 @@ body {
   width: 36px;
   position: absolute;
 }
+
+#fileInput.authpage {
+  width: calc(100% - 40px);
+  height: 300px;
+  margin-top: -180px;
+  margin-bottom: 10px;
+  opacity: 0;
+  position: relative;
+}
+
+#fileInput.authpage > div > .custom-file > input {
+  cursor: pointer;
+  z-index: 0 !important;
+  width: 100%;
+  height: 300px;
+  margin: 0 auto;
+}
