--- a/assets/scss/main-page/card.scss
+++ b/assets/scss/main-page/card.scss
@@ -333,7 +333,6 @@
 
     .sts-i-wrp {
       display: flex;
-      justify-content: space-between;
       align-items: center;
 
       .checkbox-recruit-wrap {
@@ -367,6 +366,37 @@
             line-height: 33px;
             font-size: 16px;
           }
+        }
+      }
+
+      .auth-need-img {
+        box-sizing: border-box;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 6px 8px;
+        gap: 6px;
+
+        width: 130px;
+        height: 36px;
+
+        background: linear-gradient(0deg, #FFFFFF, #FFFFFF), #FFFFFF;
+        border: 1px solid #E7E7E7;
+        border-radius: 6px;
+
+        img {
+          width: 24px;
+          height: 24px;
+        }
+
+        .auth-info-text {
+          font-weight: 600;
+          font-size: 14px;
+          line-height: 20px;
+          text-align: center;
+          color: #383838;
         }
       }
     }
