--- a/assets/scss/detail-page/detail.scss
+++ b/assets/scss/detail-page/detail.scss
@@ -490,7 +490,7 @@
         display: flex;
         width: 55vw;
         height: 50px;
-        background: #FAFAFA;
+        background: #fafafa;
         border-radius: 8px;
         // line-height: 44px;
         font-size: 0.88rem;
@@ -659,6 +659,133 @@
           border-radius: 32px;
           cursor: pointer;
         }
+      }
+    }
+  }
+  .accusation-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    display: inline-flex;
+    justify-content: flex-end;
+    .content-wrp {
+      position: fixed;
+      bottom: 0;
+      width: calc(100% - 40px);
+      height: 508px;
+      padding: 24px 20px 36px 20px;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 32px;
+      border-radius: 12px 12px 0px 0px;
+      background: #fff;
+      .title {
+        color: #000;
+        font-family: Pretendard;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+      }
+      .desc {
+        margin-top: 8px;
+        margin-bottom: 6px;
+        color: #8a8a8a;
+        font-family: Pretendard;
+        font-size: 13px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+      }
+      .select-wrp {
+        display: flex;
+        margin-top: 28px;
+        .select-img {
+          margin-right: 8px;
+          img {
+            width: 20px;
+            height: 20px;
+          }
+        }
+      }
+      .btn {
+        margin-top: 32px;
+        border-radius: 4px;
+        border: 1px solid #d9e5f4;
+        background: #fff;
+        height: 52px;
+        line-height: 52px;
+        text-align: center;
+        color: #414c5b;
+        font-family: Pretendard;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 600;
+      }
+    }
+  }
+  .accusation-complete-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    .content-wrp {
+      width: 280px;
+      height: 188px;
+      border-radius: 12px;
+      background: #fff;
+      .top {
+        display: flex;
+        width: 280px;
+        height: 76px;
+        padding: 24px 0px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 17px;
+        display: inline-flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 6px;
+        div:first-child {
+          color: #061935;
+          font-family: Pretendard;
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 24px; /* 133.333% */
+        }
+        div:nth-child(2) {
+          color: #5c6c82;
+          font-family: Pretendard;
+          font-size: 13px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+        }
+      }
+      .btn {
+        border-radius: 8px;
+        border: 1px solid #d9d9d9;
+        background: #fff;
+        height: 48px;
+        line-height: 48px;
+        margin: 0px 16px 16px 16px;
+        color: #454545;
+        font-family: Pretendard;
+        font-size: 15px;
+        font-weight: 500;
+        text-align: center;
       }
     }
   }
