--- a/assets/scss/main-page/category.scss
+++ b/assets/scss/main-page/category.scss
@@ -384,4 +384,85 @@
     border-radius: 8px;
     cursor: pointer;
   }
+
+  .ask-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    .content-wrp {
+      width: 280px;
+      height: 240px;
+      border-radius: 12px;
+      background: #fff;
+      .close {
+        text-align: right;
+        img {
+          width: 24px;
+          margin-top: 20px;
+          margin-right: 24px;
+        }
+      }
+      .top {
+        display: flex;
+        width: 280px;
+        height: 76px;
+        padding: 24px 0px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 17px;
+        display: inline-flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 6px;
+        div:first-child {
+          color: #061935;
+          font-family: Pretendard;
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 24px; /* 133.333% */
+        }
+        div:nth-child(2) {
+          color: #5c6c82;
+          font-family: Pretendard;
+          font-size: 13px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+        }
+      }
+      .btn {
+        border-radius: 8px;
+        border: 1px solid #d9d9d9;
+        background: #fff;
+        height: 48px;
+        line-height: 48px;
+        margin: 0px 16px 16px 16px;
+        color: #454545;
+        font-family: Pretendard;
+        font-size: 15px;
+        font-weight: 500;
+        .btn-content-wrp {
+          width: max-content;
+          margin: 0 auto;
+          display: flex;
+          .copy {
+            margin-top: 3px;
+            img {
+              width: 20px;
+              margin-right: 8px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
