--- a/assets/scss/detail-page/detail.scss
+++ b/assets/scss/detail-page/detail.scss
@@ -547,6 +547,12 @@
           width: 24px;
         }
       }
+
+      .copy-url {
+        img {
+          width: 40px;
+        }
+      }
     }
 
     .m-comment-container {
@@ -662,6 +668,81 @@
       }
     }
   }
+  .detail-menu-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    display: inline-flex;
+    justify-content: flex-end;
+    .content-wrp {
+      position: fixed;
+      bottom: 0;
+      width: calc(100% - 40px);
+      height: 100px;
+      padding: 16px 20px 24px 20px;
+      flex-direction: column;
+      align-items: flex-start;
+      border-radius: 12px 12px 0px 0px;
+      background: #fff;
+      .title {
+        display: flex;
+        line-height: 50px;
+        color: #000;
+        font-family: Pretendard;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        div:nth-child(2) {
+          line-height: 50px;
+        }
+        img {
+          width: 24px;
+          margin-right: 12px;
+          margin-top: 12px;
+        }
+      }
+      .desc {
+        margin-top: 8px;
+        margin-bottom: 6px;
+        color: #8a8a8a;
+        font-family: Pretendard;
+        font-size: 13px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+      }
+      .select-wrp {
+        display: flex;
+        margin-top: 28px;
+        .select-img {
+          margin-right: 8px;
+          img {
+            width: 20px;
+            height: 20px;
+          }
+        }
+      }
+      .btn {
+        margin-top: 32px;
+        border-radius: 4px;
+        border: 1px solid #d9e5f4;
+        background: #fff;
+        height: 52px;
+        line-height: 52px;
+        text-align: center;
+        color: #414c5b;
+        font-family: Pretendard;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 600;
+      }
+    }
+  }
   .accusation-popup {
     position: fixed;
     top: 0;
@@ -728,7 +809,7 @@
       }
     }
   }
-  .accusation-complete-popup {
+  .complete-popup {
     position: fixed;
     top: 0;
     left: 0;
@@ -772,6 +853,7 @@
           font-style: normal;
           font-weight: 400;
           line-height: normal;
+          text-align: center;
         }
       }
       .btn {
