--- a/assets/scss/my-page/my-page.scss
+++ b/assets/scss/my-page/my-page.scss
@@ -163,7 +163,7 @@
 
     .m-mypage-body {
       height: calc(100vh - 144px);
-      padding: 40px 16px 0 16px;
+      padding-top: 40px;
       text-align: center;
       .m-mypage-body-top {
         height: 120px;
@@ -204,133 +204,156 @@
           }
         }
       }
-
-      .m-sub-title {
-        margin-bottom: 3vh;
-        .m-sub-title-highlight {
-          color: #3e82f1;
-        }
-
-        @include tablet {
-          font-size: 22px;
-        }
-      }
-
-      .m-nickname-left {
-        text-align: left;
-        font-size: 0.88rem;
-        font-weight: 500;
-        color: #454545;
-        margin-bottom: 6px;
-        @include tablet {
-          font-size: 20px;
-        }
-      }
-
-      .m-nickname {
-        &.m-selected {
-          border: 1px solid #3e82f1;
-        }
-        display: flex;
-        width: 99%;
-        height: 48px;
-        margin-bottom: 20px;
-        background-color: #ffffff;
-        box-shadow: 0px 0px 4px rgba(0, 52, 138, 0.04),
-          0px 4px 8px rgba(0, 52, 138, 0.06);
-        border-radius: 8px;
-        border: 1px solid #fff;
-
-        @include lands-mobile {
-          height: 10vh;
-        }
-
-        .m-nickname-content {
-          flex-grow: 1;
-          text-align: left;
-          height: 48px;
-          line-height: 48px;
-          margin-left: 12px;
-          input {
-            width: 100%;
-            height: 35px;
-            font-size: 1rem;
-            border: none;
+      .mypage-middle {
+        padding: 0 16px 12px 16px;
+        .m-sub-title {
+          margin-bottom: 3vh;
+          .m-sub-title-highlight {
+            color: #3e82f1;
           }
-          input:focus {
-            outline: none;
-          }
-
-          @include tablet {
-            font-size: 20px;
-          }
-        }
-
-        .m-edit-button-wrp {
-          width: 60px;
-          height: 32px;
-          line-height: 32px;
-          margin: 8px 8px 8px 12px;
-          color: #3e82f1;
-          border: 1px solid #efefef;
-          border-radius: 9999px;
-          text-align: center;
-        }
-      }
-
-      .m-email {
-        background: #f5f5f5;
-        border-radius: 6px;
-        height: 48px;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        justify-content: center;
-        border: 1px solid #f5f5f5;
-
-        @include lands-mobile {
-          height: 10vh;
-        }
-
-        input {
-          width: 90%;
-          color: #7a7a7a;
-          text-align: center;
-          background: #f5f5f5;
-          border: none;
 
           @include tablet {
             font-size: 22px;
           }
         }
-      }
-      .m-mypage-bottom {
-        display: flex;
-        padding: 24px 8px;
-        height: 48px;
-        line-height: 48px;
-        font-size: 1rem;
-        color: #7a7a7a;
-        text-align: left;
-        &._01 {
-          padding-bottom: 0;
-        }
-        &._02 {
-          border-top: 1px solid #e7e7e7;
-          padding-top: 0;
-          padding-bottom: 0;
-        }
-        cursor: pointer;
-        .title {
-          flex-grow: 1;
-        }
-        .right-arrow {
-          width: 24px;
-          img {
-            width: 24px;
-            height: 24px;
-            vertical-align: middle;
+
+        .m-nickname-left {
+          text-align: left;
+          font-size: 0.88rem;
+          font-weight: 500;
+          color: #454545;
+          margin-bottom: 6px;
+          @include tablet {
+            font-size: 20px;
           }
+        }
+
+        .m-nickname {
+          &.m-selected {
+            border: 1px solid #3e82f1;
+          }
+          display: flex;
+          width: 99%;
+          height: 48px;
+          margin-bottom: 20px;
+          background-color: #ffffff;
+          box-shadow: 0px 0px 4px rgba(0, 52, 138, 0.04),
+            0px 4px 8px rgba(0, 52, 138, 0.06);
+          border-radius: 8px;
+          border: 1px solid #fff;
+
+          @include lands-mobile {
+            height: 10vh;
+          }
+
+          .m-nickname-content {
+            flex-grow: 1;
+            text-align: left;
+            height: 48px;
+            line-height: 48px;
+            margin-left: 12px;
+            input {
+              width: 100%;
+              height: 35px;
+              font-size: 1rem;
+              border: none;
+            }
+            input:focus {
+              outline: none;
+            }
+
+            @include tablet {
+              font-size: 20px;
+            }
+          }
+
+          .m-edit-button-wrp {
+            width: 60px;
+            height: 32px;
+            line-height: 32px;
+            margin: 8px 8px 8px 12px;
+            color: #3e82f1;
+            border: 1px solid #efefef;
+            border-radius: 9999px;
+            text-align: center;
+          }
+        }
+
+        .m-email {
+          background: #f5f5f5;
+          border-radius: 6px;
+          height: 48px;
+          display: flex;
+          align-items: center;
+          text-align: center;
+          justify-content: center;
+          border: 1px solid #f5f5f5;
+
+          @include lands-mobile {
+            height: 10vh;
+          }
+
+          input {
+            width: 90%;
+            color: #7a7a7a;
+            text-align: center;
+            background: #f5f5f5;
+            border: none;
+
+            @include tablet {
+              font-size: 22px;
+            }
+          }
+        }
+        .m-mypage-bottom {
+          display: flex;
+          padding: 12px 4px;
+          height: 20px;
+          color: #2e2e2e;
+          font-family: Pretendard;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 20px;
+          text-align: left;
+          div:first-child {
+            line-height: 20px;
+          }
+          cursor: pointer;
+          .title {
+            flex-grow: 1;
+          }
+          .right-arrow {
+            width: 24px;
+            img {
+              width: 24px;
+              height: 24px;
+              vertical-align: middle;
+            }
+          }
+        }
+
+        ._01 {
+          margin-top: 32px;
+        }
+      }
+
+      .blank {
+        height: 6px;
+        background-color: #f3f3f3;
+      }
+      .m-mypage-menu {
+        color: rgba(46, 46, 46, 0.6);
+        font-family: Pretendard;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 20px; /* 142.857% */
+        padding-top: 12px;
+        div {
+          height: 20px;
+          padding: 12px 20px;
+          text-align: left;
         }
       }
     }
