--- a/assets/scss/blind-date/dropdown-bankname.scss
+++ b/assets/scss/blind-date/dropdown-bankname.scss
@@ -72,13 +72,12 @@
   }
 
   .select-box .main {
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
+    border-radius: 8px;
 
     .hr {
       width: 100vw;
       height: 0.5px;
-  
+
       background: rgba(239, 239, 239, 1);
     }
   }
